# dream_engine

./: .gitignore  Cargo.toml
assets/raw/: model2.mtl  output_preview.exr  relic_test.mtl
assets/shaders/: picker.comp  surface.frag  surface.glsl  surface.vert
crates/dream_core/: Cargo.toml
crates/dream_core/src/: lib.rs  types.rs
crates/dream_forge/: Cargo.toml
crates/dream_forge/src/: context.rs  lib.rs  pipeline.rs  renderer.rs  shader_compiler.rs  shader_watcher.rs  swapchain.rs
crates/dream_forge/src/memory/: abc_streamer.rs  manager.rs  mega_buffer.rs  mod.rs  staging.rs
crates/dream_offline/: Cargo.toml
crates/lucid_runtime/: Cargo.toml
crates/lucid_runtime/src/: main.rs
crates/seed_architect/: Cargo.toml
crates/seed_architect/src/: abc_loader.rs  importer.rs  lib.rs  main.rs
docs/reference/: engine_rules.md
