[package]
name = "dream_forge"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { workspace = true }
gpu-allocator = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
dream_core = { path = "../dream_core" } # Lien interne
ash-window = { workspace = true } # <--- C'était l'invité manquant !
shaderc = "0.8"
notify = "6.1"