[package]
name = "seed_architect"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Cores Internes ---
dream_core = { path = "../dream_core" }
dream_forge = { path = "../dream_forge" }

# --- Math & Serialization (Universel 2030) ---
glam = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3" 
    
# --- Ingestion & Mémoire ---
bytemuck = { version = "1.13", features = ["derive"] }
tobj = "4.0"

# --- Log & Windowing ---
winit = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = "0.9.2"
